# shell-c

./: .gitignore  CMakeLists.txt  README.md  shell
include/: builtins.h  completion.h  executor.h  parser.h  redirection.h
src/: builtins.c  completion.c  executor.c  explain.txt  main.c  parser.c  redirection.c
